--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello world 2019221005 문산하
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>디지털 퍼블리싱2 사이트</title>
+        <!--euc-kr, utf-8 -->
+        <meta charset="utf-8" />
+        <meta name="author" content="문산하" />
+
+    </head>
+    <body>
+        <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/training.html">Traning</a>
+        <!--anchor 태그 -->
+       
+
+        <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/html_part1.html"target="_blank"> '2주차- HTML기초'</a>
+        <br />
+    </body>
+    
+</html>
