--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     </head>
     <body>
-        <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/training.html">Traning</a>
+        <a href="training.html">Traning</a>
         <!--anchor 태그 -->
        . 
 
-        <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/html_part1.html"target="_blank"> '2주차- HTML기초'</a>
+        <a href="html_part1.html"target="_blank"> '2주차- HTML기초'</a>
         <br />
     </body>
     
