--- a/html_part1.html
+++ b/html_part1.html
@@ -20,7 +20,7 @@
     </head>
     <body>
            
-        <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/index.html">index </a>
+        <a href="index.html">index </a>
         <!--h1~h6, br, hr, ul. ol. dl -->
         <h1>고양이</h1>
         <p>세상에서 제일 귀여운</p>
