--- a/training.html
+++ b/training.html
@@ -16,7 +16,8 @@
         </style>
     </head>
      <body>
-            <a href="file:///C:/Users/%EB%AC%B8%EC%82%B0%ED%95%98/Documents/GitHub/DP2019/index.html">index </a>
+            <a href="index.html">index </a>
+
         <!-- h1~h6 순번x, 깊이(depth)o -->
         <h1>대한민국</h1>
         <p>아시아에서 가운데 있는</p>
