--- a/html/training.html
+++ b/html/training.html
@@ -82,13 +82,8 @@
                         <sup>윗첨자</sup>
                         <sub>아랫첨자</sub>
 
-                        2<sup>2</sup>
-                        h<sub>2</sub>0
-
-
-                        <!--절대주소 상대주소-->
-                        <img src="./images/puppydog.jpg" width="100px" />
-                        <img src="images/puppydog.jpg" height="100px"  />
+                        2<sup
+                        
 
     
 
