--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     </head>
     <body>
-        <a href="training.html">Traning</a>
+        <a href="training.html">3주차- HTML완료-Traning.html</a>
+        <br>
+    
         <!--anchor 태그 -->
-       . 
 
         <a href="html_part1.html" target="_blank"> '2주차- HTML기초'</a>
         <br />
