--- a/html5.html
+++ b/html5.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-            <a href="index.html">index</a>
+            <a href="index.html">돌아가기</a>
         <header>머릿말</header>
         <div>
             <nav>네비게이션</nav>
