--- a/training.html
+++ b/training.html
@@ -88,6 +88,8 @@
          <dl>
              <dt> ordered list 순차적 목록 </dt>
              <dd>순서가 중요하지 않은 목록, 위치를 바꾸어도 문제없다 </dd>
+             <dt>unodered list 비 순차적 목록</dt>
+             <dd>순서가 중요하지 않은 목록, 위치를 바꾸어도 문제없다</dd>
 
          </dl>
          <strong>강한 강조</strong>
