--- a/html_part1.html
+++ b/html_part1.html
@@ -20,7 +20,7 @@
     </head>
     <body>
            
-        <a href="index.html">index </a>
+        <a href="index.html">돌아가기 </a>
         <!--h1~h6, br, hr, ul. ol. dl -->
         <h1>고양이</h1>
         <p>세상에서 제일 귀여운</p>
