--- a/layout1.html
+++ b/layout1.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <a href="index.html">index</a>
+        <a href="index.html">돌아가기</a>
 
         <div id="wrap">
         <header>
@@ -40,7 +40,7 @@
                 <h3>Web Design</h3>
                 <div>
                     <!-- 그림, 제목, 내용(글) -->
-                    <img src="images/image 1.jpg"/>
+                    <img src="images/image1.jpg"/>
                     <dl>
                         <dt>
                             Lorem ipsum dolor sit amet
