--- a/css.html
+++ b/css.html
@@ -35,12 +35,14 @@
         </style>
     </head>
     <body>
-            <a href="index.html">index</a>
+            <a href="index.html">돌아가기</a>
         <b>내용</b>
         <div class="c_name">클래스 선택자</div>
         <div class="c_name">클래스 선택자1</div>
         <div id="i_name">아이디 선택자</div>
-        <p>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+        <p>흔들리는 꽃들속에서 네 샴푸향이 느껴진거야 스쳐 지나간건가 뒤돌아보지만 그냥 사람들만 보이는거야 
+            다와가는 집근처에서 괜히 핸드폰만 만지는거야한번 연락해볼까 용기내보지만 그냥 내마음만 아쉬운거야
+             걷다가보면 항상이렇게 너를 </p>
 
         <ul> <!-- parent, 부모 -->
             <li class="li1">리스트1</li>
