--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
              <a href="css.html"> css바로가기 </a>
              <br>
              <a href="layout1.html">layout1</a>
+             <br>
+             <a href="layout2.html">layout2</a>
          </body>
 </html>
         
