--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
              <a href="layout1.html">layout1</a>
              <br>
              <a href="layout2.html">layout2</a>
+             <br>
+             <a href="layout3.html">layout3</a>
          </body>
 </html>
         
