--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
              <a href="html_part1.html"> 2주차 - HTML기초</a>
              <br>
              <a href="html5.html"> html5 실습 </a>
-            <br>
+             <br>
              <a href="css.html"> css바로가기 </a>
              <br>
              <a href="layout1.html">layout1</a>
@@ -25,6 +25,8 @@
              <a href="layout2.html">layout2</a>
              <br>
              <a href="layout3.html">layout3</a>
+             <br> 
+             <a href="masonry.html">masonry</a>
          </body>
 </html>
         
