--- a/layout3.html
+++ b/layout3.html
@@ -3,11 +3,30 @@
         <title>layout3</title>
         <meta charset="utf-8">
     </head>
+    <style>
+    body{background-image: url(images/Layout3_back.jpg);
+    }
+    header li {
+        float: left;
+        list-style: none;
+        padding: 0px 15px;
+
+    }
+    .clear{
+                clear: both;
+                height: 0px;
+                overflow: hidden;
+            }
+            
+    </style>
     <body>
         <a href="index.html">돌아가기</a>
         <div id="wrap">
             <header>
                 <h1>Gridly</h1>
+                <div class="short_line"></div>
+
+
                 <nav>
                 <ul>
                     <li>home</li>
@@ -16,6 +35,8 @@
                     <li>branding/identity</li>
                     <li>about me</li>
                     <li>contact</li>
+                    <div class="clear"> </div>
+                    
                 </ul>
             </nav>
             </header>
