--- a/masonry.html
+++ b/masonry.html
@@ -38,38 +38,38 @@
 	<a href="../index.html">돌아가기</a>
 	<div class="grid">
 	  <div class="grid-item">
-	  	<img src="layout3_img1.jpg" />
+	  	<img src="images/layout3_img1.jpg" />
 	  </div>
 	  <div class="grid-item grid-item--width2">
 		  <!-- 띄어쓰기를 이용하여 두 가지 클래스명을 지정함 -->
-	  	<img src="layout3_img2.jpg" />
+	  	<img src="images/layout3_img2.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img3.jpg" />
+	  	<img src="images/layout3_img3.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img4.jpg" />
+	  	<img src="images/layout3_img4.jpg" />
 	  </div>
 	  <div class="grid-item grid-item--width2">
-	  	<img src="layout3_img5.jpg" />
+	  	<img src="images/layout3_img5.jpg" />
 	  </div>
 	  <div class="grid-item grid-item--width2">
-	  	<img src="layout3_img6.jpg" />
+	  	<img src="images/layout3_img6.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img7.jpg" />
+	  	<img src="images/layout3_img7.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img8.jpg" />
+	  	<img src="images/layout3_img8.jpg" />
 	  </div>
 	  <div class="grid-item grid-item--width2">
-	  	<img src="layout3_img9.jpg" />
+	  	<img src="images/layout3_img9.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img10.jpg" />
+	  	<img src="images/layout3_img10.jpg" />
 	  </div>
 	  <div class="grid-item">
-	  	<img src="layout3_img11.jpg" />
+	  	<img src="images/layout3_img11.jpg" />
 	  </div>
 	</div>
 </body>
