--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <br>
              <a href="layout3.html">layout3</a>
              <br> 
-             <a href="masonry.html">masonry</a>
+             <a href="Masonry/masonry.html">masonry</a>
          </body>
 </html>
         
