--- a/css.html
+++ b/css.html
@@ -133,7 +133,7 @@
             font-weight: bold;
             /* normal, light, bold, bolder */
             /* 100, 200, 300, 400, 500 */
-            font-styly: italic;
+            font-style: italic;
             font-variant: small-caps; /* 작은 대문자 표현 */
             text-align: center; /* 글자 가운데로(inline) */
             }
