--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
              <a href="layout3.html">layout3</a>
              <br> 
              <a href="Masonry/masonry.html">masonry</a>
+             <br>
+             <a href="free_layout.html">프리 레이아웃</a>
          </body>
 </html>
         
