--- a/layout2.html
+++ b/layout2.html
@@ -134,8 +134,9 @@
             <!-- div(블록), span(라인) -->
             <!-- cfc91d -->
         </h1>
-        <nav>
+        <nav class="use-middle"></navclass>>
             <ul>
+                   
                 <li>HOME</li>
                 <li>ABOUT ME</li>
                 <li>SERVICE</li>
