--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> free_layout </title>
+        <title> INDEX </title>
         <!--euc-kr, utf-8 -->
         <meta charset="utf-8" />
         <meta name="author" content="문산하" />
