--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ input {
 
       </form>
 
-      <p class="text--center">Just wanna to go? <a href="index.html">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
+      <p class="text--center">Just wanna to go? <a href="indexdoor.html">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
     </div>
 
