--- a/free_layout.html
+++ b/free_layout.html
@@ -2,6 +2,7 @@
 <head>
 <title>free_layout</title>
 <meta charset="utf-8">
+
 <style type="text/css">
          a { text-decoration:none }
          /*scroll bar*/
@@ -358,11 +359,12 @@ footer ul>li{
             footer{
                 background-color: #333;
                 color: #5e6160;
-                padding: 30px;
+                padding:30px;
             }
             footer #n_list li{
                 position: relative;
-                left: 500px;
+                left: 400;
+                text-align: center;
                 list-style: none; 
                 padding-left: 10px;
                 padding-right: 10px;
@@ -371,6 +373,7 @@ footer ul>li{
 </style>
 </head>
 <body>
+
 <div id="content">
 	<section class="links">
 	<nav class="link-effect-13" id="link-effect-13">
@@ -397,7 +400,7 @@ footer ul>li{
 		</div>
 		<div id="png_center">
 			<a href="#">
-			<img src="images/셜록버튼2.png">
+			<img src="images/sherlockbt2.png">
 			</a>
 		</div>
 	</div>
@@ -415,7 +418,7 @@ footer ul>li{
 <div class="gallery">
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="https://namu.wiki/w/%EC%85%9C%EB%A1%9D(%EB%93%9C%EB%9D%BC%EB%A7%88)"><img class='small3' src="images/셜록3.jpg">
+			<a href="https://namu.wiki/w/%EC%85%9C%EB%A1%9D(%EB%93%9C%EB%9D%BC%EB%A7%88)"><img class='small3' src="images/sherlock3.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
@@ -425,7 +428,7 @@ footer ul>li{
 	</div>
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="http://m.blog.naver.com/miwat/220294238422"><img class='small' src="images/셜록9.jpg">
+			<a href="http://m.blog.naver.com/miwat/220294238422"><img class='small' src="images/sherlock9.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
@@ -435,7 +438,7 @@ footer ul>li{
 	</div>
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="#"><img class='small' src="images/셜록담배.jpg">
+			<a href="#"><img class='small' src="images/sherlockxi.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
@@ -445,7 +448,7 @@ footer ul>li{
 	</div>
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="https://www.bbc.co.uk/programmes/b018ttws/episodes"><img class='small' src="images/셜록5.jpg">
+			<a href="https://www.bbc.co.uk/programmes/b018ttws/episodes"><img class='small' src="images/sherlock5.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
@@ -455,7 +458,7 @@ footer ul>li{
 	</div>
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="https://www.bbc.co.uk/programmes/profiles/4fyrVz8DHHNJ55xYbwYtT0W/characters"><img class='small' src="images/셜록7.jpg">
+			<a href="https://www.bbc.co.uk/programmes/profiles/4fyrVz8DHHNJ55xYbwYtT0W/characters"><img class='small' src="images/sherlock7.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
@@ -465,7 +468,7 @@ footer ul>li{
 	</div>
 	<div class="gallery-item">
 		<div class="gallery-item-image">
-			<a href="https://www.bbc.co.uk/programmes/b018ttws"><img class='small2' src="images/셜록8.jpg">
+			<a href="https://www.bbc.co.uk/programmes/b018ttws"><img class='small2' src="images/sherlock8.jpg">
 		</div>
 		</a>
 		<div class="gallery-item-description">
