--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <META name=viewport content="width=device-width, initial-scale=0.8">   
 	<meta charset="UTF-8">
 	<title>http://indexdoor</title>
 <style>
@@ -163,7 +164,7 @@ input {
         </div>
 
         <div class="form__field">
-          <input type="submit" value="Log In">
+            <input type="submit"value="Log in" onClick="window.open('indexdoor.html')">
         </div>
 
       </form>
